--- a/services.html
+++ b/services.html
@@ -1,4 +1,11 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Services — Techlyne</title><style>:root{
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Services — Techlyne</title>
+<style>
+:root{
   --bg:#061226;
   --card:#081426;
   --muted:#9aa4b2;
@@ -18,8 +25,6 @@ body{margin:0;background:linear-gradient(180deg,#041021,#061226);color:#e6eef6;p
 header{display:flex;justify-content:space-between;align-items:center;gap:16px;margin-bottom:20px}
 .brand{display:flex;align-items:center;gap:12px;font-weight:700;letter-spacing:0.2px;font-size:18px}
 .logo svg{width:62px;height:62px}
-
-/* Neon circular logo styles (copied from home) */
 .logo.logo-neon {
   width: 80px;
   height: 10px;
@@ -34,12 +39,17 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
   width: 100px;
   height: 84px;
   border-radius: 50%;
-  padding: 6px; 
+  padding: 6px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   overflow: hidden;
+  border:1px solid rgba(255,255,255,0.03);
+  box-shadow:0 6px 18px rgba(2,6,23,0.5);
+}
+a{
+  text-decoration: none;
 }
 .logo-img{
   position:relative;
@@ -53,8 +63,9 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
   transition: transform .18s ease, box-shadow .18s ease;
   box-shadow: 0 6px 18px rgba(2,6,23,0.5);
   border: 1px solid rgba(255,255,255,0.03);
-  max-width:127px; /* desktop cap */
+  max-width:127px;
 }
+
 nav{display:flex; gap:10px; align-items:center;}
 .btn{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#02222b;padding:10px 14px;border-radius:10px;font-weight:700;border:none;cursor:pointer;box-shadow:0 8px 30px rgba(45,118,138,0.08);transition:transform .18s ease, box-shadow .18s ease, filter .12s ease;}
 .btn:hover{transform:translateY(-4px);box-shadow:0 18px 36px rgba(45,118,138,0.12);filter:brightness(1.03)}
@@ -72,47 +83,236 @@ p.lead{margin:0 0 14px;color:var(--muted);font-size:15px;line-height:1.45}
 .card{background: linear-gradient(180deg, rgba(255,255,255,0.01), transparent);border-radius:14px;padding:18px;border:1px solid rgba(255,255,255,0.03);transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;cursor:default;overflow:hidden}
 .card:hover{ transform: translateY(-8px); box-shadow: 0 18px 48px rgba(2,6,23,0.6); border-color: rgba(125,211,252,0.12) }
 .card .title-row{display:flex;justify-content:space-between;align-items:center;gap:8px}
-.price{font-weight:800;font-size:18px;color:var(--accent2)}
+.price{font-weight:800;font-size:18px;color:var(--accent2);display:flex;align-items:center;gap:8px}
+.price .orig{font-weight:600;color:var(--muted);text-decoration:line-through;font-size:13px}
+.badge-discount{background:rgba(217,107,255,0.12);color:#d96bff;padding:6px 8px;border-radius:8px;font-weight:700;font-size:12px}
 ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
 .small{font-size:13px;color:var(--muted)}
-a.button-link{display:inline-block;padding:10px 14px;border-radius:10px;background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#02222b;font-weight:700;text-decoration:none;transition:transform .12s ease,box-shadow .12s ease}
-a.button-link:hover{transform:translateY(-4px);box-shadow:0 14px 36px rgba(45,118,138,0.12)}
-.cta-strip{margin:22px 0;padding:16px;border-radius:12px;background:linear-gradient(90deg, rgba(77,208,225,0.03), rgba(125,211,252,0.02));display:flex;justify-content:space-between;align-items:center;gap:12px}
-.two-col{display:grid;grid-template-columns:1fr 360px;gap:18px;margin-top:22px}
-.faq{background:var(--card);padding:18px;border-radius:12px}
-.faq-item{padding:12px;border-radius:8px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);margin-bottom:8px}
-.contact{background:var(--card);padding:18px;border-radius:12px;position:sticky;top:24px;height:max-content}
-input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:inherit}
-.close-btn{background:#fff;color:#041021;padding:8px 10px;border-radius:8px;border:none;cursor:pointer;font-weight:700}
-.lang-switch{display:flex;gap:8px;align-items:center}
-.lang-switch button{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted);padding:6px 8px;border-radius:8px;cursor:pointer}
-.lang-switch button.active{background:rgba(255,255,255,0.03);color:#e6eef6;border-color:rgba(125,211,252,0.18)}
-.scene-overlay{position:absolute;inset:0;border-radius:inherit;pointer-events:none;z-index:1}
-.codeglyph{position:absolute;left:0;top:0;pointer-events:none;mix-blend-mode:screen;color:rgba(125,211,252,0.9);font-family:monospace;white-space:nowrap;font-size:13px}
-.btn-hover-burst{position:relative;overflow:visible}
-@media(max-width:900px){.two-col{grid-template-columns:1fr}header{flex-direction:column;align-items:flex-start;gap:14px}.hero{flex-direction:column;align-items:flex-start}}</style></head><body><div class="container"><header>
-      <div class="brand" aria-label="Techlyne">
-        <!-- Neon circular logo -->
-        <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
-          <div class="logo-ring">
-            <img src="./img/photo_2025-10-01_20-26-04-Photoroom.png" alt="Techlyne logo" class="logo-img" />
-          </div>
-        </div>
-
-        <div>
-          <div style="font-size:14px" id="brand-name">Techlyne</div>
-          <div class="muted" style="margin-top:2px" id="brand-sub">Manual development • Integrations • Security</div>
+.lang-switch{display:flex;gap:8px;align-items:center;margin-left:6px}
+.lang-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:6px 8px;border-radius:8px;cursor:pointer;font-weight:700}
+.lang-btn.active{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#02222b;border-color:transparent;box-shadow:0 6px 18px rgba(45,118,138,0.08)}
+@media(max-width:700px){
+  body{padding:12px}
+  header{flex-direction:column;align-items:flex-start;gap:12px}
+  .logo-ring{width:76px;height:64px}
+  .logo-img{width:72px;height:72px}
+  .lang-switch{order:3;width:100%;justify-content:flex-start}
+  nav{gap:8px;flex-wrap:wrap}
+}
+</style>
+</head>
+<body>
+<div class="container">
+  <header>
+    <div class="brand" aria-label="Techlyne">
+      <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
+        <div class="logo-ring">
+          <img src="./img/photo_2025-10-01_20-26-04-Photoroom.png" alt="Techlyne logo" class="logo-img" />
         </div>
       </div>
 
-      <nav>
-        <a href="index.html" class="btn-ghost" data-i18n="packages">Home</a>
-       
-        
-      </nav>
-    </header><main><h1>Services</h1><section class="card" style="margin-top:12px"><h3>Lending Website (Landing)</h3><p class="small">Single-page responsive landing, Telegram-based contact, analytics, optimisation, SSL, deploy, 1 revision.</p></section><section class="card" style="margin-top:12px"><h3>Website (Standard)</h3><p class="small">Up to 5 pages, forms to Telegram/CRM, SEO, responsive, 2 revisions.</p></section><section class="card" style="margin-top:12px"><h3>Premium Website</h3><p class="small">Up to 10 pages, bespoke design. Includes full Security Package (diagnostics, Cloudflare/WAF, CSP, headers, hardening). 3 revisions, 14 days support.</p></section><section class="card" style="margin-top:12px"><h3>Web3 Website</h3><p class="small">MetaMask / WalletConnect integration, UI for contract interaction, presale UI (frontend).</p></section>
+      <div>
+        <div style="font-size:14px" id="brand-name" data-i18n="brand_name">Techlyne</div>
+        <div class="muted" style="margin-top:2px" id="brand-sub" data-i18n="brand_sub">Manual development • Integrations • Security</div>
+      </div>
+    </div>
 
-<!-- E-commerce section added as requested -->
-<section class="card" style="margin-top:12px"><h3>E‑commerce Store</h3><p class="small">Full online store (products, categories, cart), payment gateway (Stripe/cards), admin panel for products & orders, analytics, SEO, deployment. Term: 7–10 days. </p></section>
+    <nav>
+      <a href="index.html" class="btn-ghost" data-i18n="nav_home">Home</a>
 
-<section class="card" style="margin-top:12px"><h3 id="smart">Smart Contracts & Audit</h3><p class="small">Development and audit available — pricing upon request due to variability.</p></section><section class="card" style="margin-top:12px"><h3>Security Add‑on</h3><p class="small">Standalone add‑on: deep diagnostics, WAF/Cloudflare setup, CSP, headers, pen‑test scenarios. Price: $49.</p></section></main><footer style="margin-top:18px" class="small">© Techlyne</footer></div></body></html>
+      <div class="lang-switch" role="tablist" aria-label="Language switch">
+        <button id="lang-en" class="lang-btn" aria-pressed="false">EN</button>
+        <button id="lang-ru" class="lang-btn" aria-pressed="false">RU</button>
+        <button id="lang-hy" class="lang-btn" aria-pressed="false">HY</button>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <h1 data-i18n="page_title">Services</h1>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="landing">Lending Website (Landing)</h3>
+        <div class="price" aria-hidden="true">
+          <span class="orig">$79</span>
+          <span class="price-value">$55</span>
+          <span class="badge-discount" aria-hidden="true">30% off</span>
+        </div>
+      </div>
+      <p class="small" data-i18n="land_desc">Single-page responsive landing, Telegram-based contact, analytics, optimisation, SSL, deploy, 1 revision.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="website">Website (Standard)</h3>
+        <div class="price" aria-hidden="true">
+          <span class="orig">$229</span>
+          <span class="price-value">$160</span>
+          <span class="badge-discount" aria-hidden="true">30% off</span>
+        </div>
+      </div>
+      <p class="small" data-i18n="web_desc">Up to 5 pages, forms to Telegram/CRM, SEO, responsive, 2 revisions.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="premium">Premium Website</h3>
+        <div class="price" aria-hidden="true">
+          <span class="orig">$449</span>
+          <span class="price-value">$225</span>
+          <span class="badge-discount" aria-hidden="true">50% off</span>
+        </div>
+      </div>
+      <p class="small" data-i18n="premium_desc">Up to 10 pages, bespoke design. Includes full Security Package. 3 revisions, 14 days support.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="web3">Web3 Website</h3>
+        <div class="price" aria-hidden="true">
+          <span class="orig">$599</span>
+          <span class="price-value">$300</span>
+          <span class="badge-discount" aria-hidden="true">50% off</span>
+        </div>
+      </div>
+      <p class="small" data-i18n="web3_desc">MetaMask / WalletConnect integration, UI for contract interaction, presale UI (frontend).</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="ecom">E-commerce Store</h3>
+        <div class="price" aria-hidden="true">
+          <span class="orig">$500</span>
+          <span class="price-value">$250</span>
+          <span class="badge-discount" aria-hidden="true">50% off</span>
+        </div>
+      </div>
+      <p class="small" data-i18n="ecom_desc">Full online store (products, categories, cart), payment gateway (Stripe/cards), admin panel, analytics, SEO, deployment.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="smart">Smart Contracts & Audit</h3>
+      </div>
+      <p class="small" data-i18n="smart_desc">Development and audit available — pricing upon request.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <div class="title-row">
+        <h3 data-i18n="security_addon_title">Security Add-on</h3>
+      </div>
+      <p class="small" data-i18n="security_addon_desc">Standalone add-on: deep diagnostics, WAF/Cloudflare setup, CSP, headers, pen-test scenarios. Price: $49.</p>
+    </section>
+  </main>
+
+  <footer style="margin-top:18px" class="small" data-i18n="footer">© Techlyne</footer>
+</div>
+
+<script>
+(function(){
+  const translations = {
+    "en": {
+      "brand_name":"Techlyne",
+      "brand_sub":"Manual development • Integrations • Security",
+      "nav_home":"Home",
+      "page_title":"Services",
+      "landing":"Lending Website (Landing)",
+      "land_desc":"Single-page responsive landing, Telegram-based contact, analytics, optimisation, SSL, deploy, 1 revision.",
+      "website":"Website (Standard)",
+      "web_desc":"Up to 5 pages, forms to Telegram/CRM, SEO, responsive, 2 revisions.",
+      "premium":"Premium Website",
+      "premium_desc":"Up to 10 pages, bespoke design. Includes full Security Package. 3 revisions, 14 days support.",
+      "web3":"Web3 Website",
+      "web3_desc":"MetaMask / WalletConnect integration, UI for contract interaction, presale UI (frontend).",
+      "ecom":"E-commerce Store",
+      "ecom_desc":"Full online store (products, categories, cart), payment gateway (Stripe/cards), admin panel, analytics, SEO, deployment.",
+      "smart":"Smart Contracts & Audit",
+      "smart_desc":"Development and audit available — pricing upon request.",
+      "security_addon_title":"Security Add-on",
+      "security_addon_desc":"Standalone add-on: deep diagnostics, WAF/Cloudflare setup, CSP, headers, pen-test scenarios. Price: $49.",
+      "footer":"© Techlyne"
+    },
+    "ru": {
+      "brand_name":"Techlyne",
+      "brand_sub":"Ручная разработка • Интеграции • Безопасность",
+      "nav_home":"Главная",
+      "page_title":"Услуги",
+      "landing":"Лендинг",
+      "land_desc":"Одностраничный адаптивный лендинг, контакт через Telegram, аналитика, оптимизация, SSL, деплой, 1 правка.",
+      "website":"Веб-сайт (Стандарт)",
+      "web_desc":"До 5 страниц, формы → Telegram/CRM, SEO, адаптив, 2 правки.",
+      "premium":"Премиум-сайт",
+      "premium_desc":"До 10 страниц, дизайн под клиента. Включён пакет безопасности. 3 правки, 14 дней поддержки.",
+      "web3":"Web3 сайт",
+      "web3_desc":"Интеграция MetaMask / WalletConnect, UI для взаимодействия с контрактом, presale UI.",
+      "ecom":"Интернет-магазин",
+      "ecom_desc":"Полный магазин (товары, категории, корзина), платежи (Stripe/карты), админ-панель, аналитика, SEO, деплой.",
+      "smart":"Смарт-контракты и аудит",
+      "smart_desc":"Разработка и аудит — цены по запросу.",
+      "security_addon_title":"Доп. пакет безопасности",
+      "security_addon_desc":"Глубокая диагностика, настройка WAF/Cloudflare, CSP, заголовки безопасности, сценарии pentest. Цена: $49.",
+      "footer":"© Techlyne"
+    },
+    "hy": {
+      "brand_name":"Techlyne",
+      "brand_sub":"Ձեռքով մշակում • Ինտեգրացիաներ • Անվտանգություն",
+      "nav_home":"Գլխավոր",
+      "page_title":"Ծառայություններ",
+      "landing":"Landing կայք",
+      "land_desc":"Միանվագ պատասխանատու ленդինգ, կապ՝ Telegram, անալիտիկա, օպտիմիզացիա, SSL, դեպլոյ, 1 վերանայում.",
+      "website":"Կայք (Ստանդարտ)",
+      "web_desc":"Մինչեւ 5 էջ, ֆորմաներ → Telegram/CRM, SEO, պատասխանատու, 2 վերանայում.",
+      "premium":"Պրեմիում կայք",
+      "premium_desc":"Մինչեւ 10 էջ, bespoke դիզայն։ ԱՆվտանգության փաթեթը ներառված է։ 3 վերանայում, 14 օր աջակցություն.",
+      "web3":"Web3 կայք",
+      "web3_desc":"MetaMask / WalletConnect ինտեգրում, UI՝ contract interaction, presale UI.",
+      "ecom":"Էլեկտրոնային խանութ",
+      "ecom_desc":"Ամբողջական խանութ (ապրանքներ, կատեգորիաներ, զամբյուղ), վճարումներ (Stripe/քարտեր), ադմին, անալիտիկա, SEO, դեպլոյ.",
+      "smart":"Սմարթ կոնտրակտներ և աուդիտ",
+      "smart_desc":"Ծրագրում և աուդիտ — գները՝ ըստ հարցման.",
+      "security_addon_title":"Անվտանգության Լրացում",
+      "security_addon_desc":"Խորաֆիկ ախտորոշում, WAF/Cloudflare կարգավորում, CSP և անվտանգության հեդերներ։ Գին՝ $49.",
+      "footer":"© Techlyne"
+    }
+  };
+
+  function apply(lang){
+    if(!translations[lang]) lang='en';
+    document.querySelectorAll('[data-i18n]').forEach(el=>{
+      const key = el.getAttribute('data-i18n');
+      if(!key) return;
+      const value = translations[lang][key];
+      if(typeof value === 'undefined') return;
+      const hasElementChildren = Array.from(el.childNodes).some(n => n.nodeType === 1);
+      if(hasElementChildren) return;
+      el.textContent = value;
+    });
+
+    document.querySelectorAll('.lang-btn').forEach(b=>{
+      b.classList.remove('active');
+      b.setAttribute('aria-pressed','false');
+    });
+    const btn = document.getElementById('lang-' + lang);
+    if(btn){ btn.classList.add('active'); btn.setAttribute('aria-pressed','true'); }
+    try { localStorage.setItem('site_lang', lang); } catch(e){}
+  }
+
+  ['en','ru','hy'].forEach(code=>{
+    const el = document.getElementById('lang-'+code);
+    if(el) el.addEventListener('click', ()=> apply(code));
+  });
+
+  try {
+    const saved = localStorage.getItem('site_lang');
+    if(saved && translations[saved]) { apply(saved); return; }
+  } catch(e){}
+
+  let userLang = (navigator.language || navigator.userLanguage || 'en').toLowerCase();
+  if(userLang.startsWith('ru') || userLang.startsWith('uk')) apply('ru');
+  else if(userLang.startsWith('hy')) apply('hy');
+  else apply('en');
+})();
+</script>
+</body>
+</html>
