--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
   box-shadow:0 6px 18px rgba(2,6,23,0.5);
 }
 .logo-img{
-  /* restored */
   position:relative;
   width:95px;
   height:95px;
@@ -114,6 +113,9 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .btn-ghost{padding:7px 9px;font-size:14px}
   .scene-overlay{min-height:120px}
 }
+a{
+  text-decoration: none;
+}
   </style>
 </head>
 <body>
@@ -138,11 +140,11 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 
         <div class="lang-switch" role="tablist" aria-label="Language switch">
           <button id="lang-en" class="lang-btn" aria-pressed="false">EN</button>
-          <button id="lang-ru" class="lang-btn" aria-pressed="false">RU</button>
-          <button id="lang-hy" class="lang-btn" aria-pressed="false">HY</button>
+          <button id="lang-ru" class="lang-btn" aria-pressed="false">Рус</button>
+          <button id="lang-hy" class="lang-btn" aria-pressed="false">Հայ</button>
         </div>
 
-        <button class="btn" id="btn-contact" style="margin-left:8px" data-i18n="contact_btn">Contact</button>
+     
       </nav>
     </header>
 
@@ -455,7 +457,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       "faq_title":"FAQ — short","how_time":"How deadlines are counted?","how_time_sub":"From receipt of materials and prepayment.","how_pay":"Payment?","how_pay_sub":"50% up front, 50% on delivery.","tech":"Technologies?","tech_sub":"Manual HTML/CSS/JS, frameworks on request. Web3 via ethers.js.","security_q":"Security?","security_q_sub":"Basic hardening included; deep audit is separate.",
       "contact_title":"Contact — Telegram","contact_note":"Buttons copy the handle and open Telegram. Email is hidden — contact via Telegram.",
       "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyne — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
-      /* popover translations */
       "order_pop_title":"Choose contact method",
       "order_pop_desc":"How would you like to place the order?",
       "order_pop_btn_tg":"Write in Telegram",
@@ -486,7 +487,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       "faq_title":"FAQ — коротко","how_time":"Как считаются сроки?","how_time_sub":"Считается от получения материалов и предоплаты.","how_pay":"Оплата?","how_pay_sub":"50% аванс, 50% при сдаче.","tech":"Технологии?","tech_sub":"Ручной HTML/CSS/JS, фреймворки по запросу. Web3 через ethers.js.","security_q":"Безопасность?","security_q_sub":"Базовое усиление включено; глубокий аудит отдельно.",
       "contact_title":"Контакт — Telegram","contact_note":"Кнопки копируют хэндл и открывают Telegram. Почта скрыта — связаться через Telegram.",
       "label_tg":"Telegram","copy_tg":"Копировать","open_tg":"Открыть Telegram","order":"Заказать","details":"Подробнее","footer":"© Techlyne — Ручная разработка","security_addon":"Также доступно: <strong>Доп. пакет безопасности</strong>",
-      /* popover translations */
       "order_pop_title":"Выберите способ связи",
       "order_pop_desc":"Как вы хотите оформить заказ?",
       "order_pop_btn_tg":"Написать в Telegram",
@@ -516,10 +516,9 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       "faq_title":"ՀՏՀ — կարճ","how_time":"Ինչպես հաշվարկվում են ժամկետները?","how_time_sub":"Հաշվում է նյութերի ստացումից և նախնական վճարից։","how_pay":"Վճարում?","how_pay_sub":"50% նախապես, 50% առաքման պահին։","tech":"Տեխնոլոգիաներ?","tech_sub":"Ձեռնարկ HTML/CSS/JS, framework-ներ ըստ հարցի. Web3՝ через ethers.js.","security_q":"Անվտանգություն?","security_q_sub":"Հիմնական ամրացումը ներառված է; խորքային աուդիտը առանձին է։",
       "contact_title":"Կապ — Telegram","contact_note":"Կոճակները պատճենում են հենդլը և բացում Telegram։ Էլ.փոստը թաքնված է — կապվեք Telegram-ով։",
       "label_tg":"Telegram","copy_tg":"Պատճենել","open_tg":"Բացել Telegram","order":" Պատվիրել","details":"Մանրամասներ","footer":"© Techlyne — Ձեռքով մշակված","security_addon":"Հավելյալ հասանելի է: <strong>Անվտանգության Լրացում</strong>",
-      /* popover translations */
       "order_pop_title":"Ընտրեք կապի եղանակը",
       "order_pop_desc":"Ինչպես ցանկանում եք պատվիրել?",
-      "order_pop_btn_tg":"Написать в Telegram", /* kept RU text if needed */
+      "order_pop_btn_tg":"Написать в Telegram",
       "order_pop_btn_form":"Բեռնել ձևը",
       "order_pop_note":"Հաղորդագրությունը ավտոմատ պատճենվում է չանհատականության համար."
     }
@@ -574,14 +573,11 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     else apply('en');
   }
 
-  // expose translations for other scripts (popover) in minimal way
-  try { window.siteTranslations = translations; } catch(e) { /* ignore */ }
-
+  try { window.siteTranslations = translations; } catch(e) { }
 })();
   </script>
 
 <style>
-/* Popover styles */
 .order-popover {
   position: absolute;
   z-index: 9999;
@@ -617,13 +613,11 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   const TG_HANDLE = '@Off_David77';
   const TG_LINK = 'https://t.me/Off_David77';
 
-  // Create popover element once (content will be rendered dynamically)
   const pop = document.createElement('div');
   pop.className = 'order-popover';
   pop.style.display = 'none';
   document.body.appendChild(pop);
 
-  // render popover content according to language
   function getCurrentSiteLang(){
     try{
       const s = localStorage.getItem('site_lang');
@@ -643,7 +637,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       order_pop_btn_form: 'Open form',
       order_pop_note: 'Message will be copied to clipboard for convenience.'
     };
-    // safe escaping is not necessary for these small strings, but we use textContent where possible
     pop.innerHTML = `
       <div class="title">${t.order_pop_title || 'Choose contact method'}</div>
       <div class="desc">${t.order_pop_desc || 'How would you like to place the order?'}</div>
@@ -655,7 +648,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     `;
   }
 
-  // Close popover when clicking outside
   function hidePop() {
     pop.style.display = 'none';
     currentTarget = null;
@@ -667,16 +659,13 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     }
   }, {capture:true});
 
-  // keyboard Escape closes
   document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') hidePop(); });
 
-  // Prepare message for clipboard (uses package & price if available)
   function buildMessage(pkg, price){
     let priceText = price ? (' — $' + price) : '';
     return `Order: ${pkg}${priceText}\nContact: ${TG_HANDLE}\nSource: ${location.href}`;
   }
 
-  // Actions (delegated because buttons are rerendered)
   pop.addEventListener('click', async (e)=>{
     const target = e.target;
     if(target.classList.contains('btn-pop-tg')){
@@ -695,33 +684,26 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     }
   });
 
-  // Positioning helper
   function showPopoverFor(target){
-    // render in current language
     const lang = getCurrentSiteLang();
     renderPopover(lang);
 
     const rect = target.getBoundingClientRect();
-    // measure after render to get offsetWidth
     pop.style.left = '-9999px';
     pop.style.top = '-9999px';
     pop.style.display = 'block';
-    // small positioning guard
     requestAnimationFrame(()=>{
       const pageX = rect.left + window.scrollX;
-      const pageY = rect.bottom + window.scrollY + 10; // 10px gap
+      const pageY = rect.bottom + window.scrollY + 10;
       const left = Math.min(pageX, window.scrollX + window.innerWidth - pop.offsetWidth - 12);
       pop.style.left = left + 'px';
       pop.style.top = pageY + 'px';
     });
   }
 
-  // Track which button invoked the popover
   let currentTarget = null;
 
-  // Attach to all [data-package] buttons and the primary landing order button if present
   function wireButtons(){
-    // buttons that already have data-package
     document.querySelectorAll('[data-package]').forEach(btn=>{
       btn.addEventListener('click', (e)=>{
         e.stopPropagation();
@@ -739,7 +721,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       landing.addEventListener('click', (e)=>{
         e.stopPropagation();
         e.preventDefault();
-        // create a synthetic data attributes so popover can build message
         landing.dataset.package = landing.dataset.package || 'Landing';
         landing.dataset.price = landing.dataset.price || '55';
         currentTarget = landing;
@@ -751,14 +732,10 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     }
   }
 
-  // init
   wireButtons();
 
-  // optional: update popover content when language changes via the visible language buttons
-  // we detect clicks on language buttons and update localStorage (apply already does that) — no extra required.
   document.querySelectorAll('.lang-btn').forEach(b=>{
     b.addEventListener('click', ()=>{
-      // if pop is visible, re-render to new language
       if(pop.style.display === 'block'){
         renderPopover(getCurrentSiteLang());
       }
