--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
 }
 .logo-img{
   position:relative;
-  width:95px;
-  height:95px;
+  width:97px;
+  height:97px;
   border-radius:50%;
   object-fit:cover;
   display:block;
@@ -52,8 +52,7 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
   transition: transform .18s ease, box-shadow .18s ease;
   box-shadow: 0 6px 18px rgba(2,6,23,0.5);
   border: 1px solid rgba(255,255,255,0.03);
-  max-width:127px; /* desktop cap */
-}
+  max-width:127px; }
 
 nav{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
 .lang-switch{display:flex;gap:8px;align-items:center;margin-left:8px}
@@ -106,7 +105,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .right{width:100%}
   .grid{grid-template-columns:1fr}
   .card{padding:12px}
-  .logo-ring{width:76px;height:64px}
+  .logo-ring{width:46px;height:48px}
   .logo-img{width:72px;height:72px}
   nav{gap:6px}
   .btn{padding:8px 10px;font-size:14px}
