--- a/services.html
+++ b/services.html
@@ -36,15 +36,15 @@ header{display:flex;justify-content:space-between;align-items:center;gap:16px;ma
   flex: 0 0 auto;
 }
 .logo-ring{
-  width: 100px;
-  height: 84px;
-  border-radius: 50%;
-  padding: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
+  width:67px;
+  height:64px;
+  border-radius:50%;
+  padding:6px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
+  overflow:hidden;
   border:1px solid rgba(255,255,255,0.03);
   box-shadow:0 6px 18px rgba(2,6,23,0.5);
 }
@@ -53,8 +53,8 @@ a{
 }
 .logo-img{
   position:relative;
-  width:95px;
-  height:95px;
+  width:97px;
+  height:97px;
   border-radius:50%;
   object-fit:cover;
   display:block;
@@ -63,8 +63,7 @@ a{
   transition: transform .18s ease, box-shadow .18s ease;
   box-shadow: 0 6px 18px rgba(2,6,23,0.5);
   border: 1px solid rgba(255,255,255,0.03);
-  max-width:127px;
-}
+  max-width:127px; }
 
 nav{display:flex; gap:10px; align-items:center;}
 .btn{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#02222b;padding:10px 14px;border-radius:10px;font-weight:700;border:none;cursor:pointer;box-shadow:0 8px 30px rgba(45,118,138,0.08);transition:transform .18s ease, box-shadow .18s ease, filter .12s ease;}
