--- a/services.html
+++ b/services.html
@@ -121,8 +121,8 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
 
       <div class="lang-switch" role="tablist" aria-label="Language switch">
         <button id="lang-en" class="lang-btn" aria-pressed="false">EN</button>
-        <button id="lang-ru" class="lang-btn" aria-pressed="false">RU</button>
-        <button id="lang-hy" class="lang-btn" aria-pressed="false">HY</button>
+        <button id="lang-ru" class="lang-btn" aria-pressed="false">Рус</button>
+        <button id="lang-hy" class="lang-btn" aria-pressed="false">Հայ</button>
       </div>
     </nav>
   </header>
